# Oxide

./: README.md  package.json
.github/: dependabot.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audit/: log.rs
src-tauri/src/core/: config.rs  error.rs  mod.rs  platform.rs
src-tauri/src/device/: mod.rs  state.rs  types.rs
src-tauri/src/device/app/: manager.rs
src-tauri/src/device/core/: info.rs  list.rs  mod.rs
src-tauri/src/device/file/: explorer.rs
src-tauri/src/device/net/: mod.rs  wireless.rs
src-tauri/src/device/perf/: monitor.rs
src-tauri/src/device/shell/: logcat.rs  mod.rs
src-tauri/src/fastboot/: flasher.rs  mod.rs  plan.rs
src-tauri/src/setup/: wizard.rs
src-tauri/src/theme/: generator.rs
src/lib/: theme.ts
src/lib/components/: MaterialShape.svelte  Select.svelte  ShapeBadge.svelte  ShellPanel.svelte  Sidebar.svelte  Sparkline.svelte
src/lib/shapes/: cornerRounding.ts  cubic.ts  feature.ts  index.ts  materialShapes.ts  matrix.ts  offset.ts  point.ts  roundedCorner.ts  roundedPolygon.ts  utils.ts
src/lib/utils/: audio.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/apps/: +page.svelte
src/routes/audit/: +page.svelte
src/routes/files/: +page.svelte
src/routes/flasher/: +page.svelte
src/routes/logcat/: +page.svelte
src/routes/process-manager/: +page.svelte
src/routes/scrcpy/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/shell/: +page.svelte
src/styles/: base.css  theme.css
(+17 files in other folders)
