[package]
name = "oxide"
version = "0.1.0"
description = "A Tauri App"
authors = ["pavelc4"]
edition = "2024"

[lib]
name = "oxide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "6"
adb_client = "3.2"
fastboot-protocol = "0.4"
material-colors = { version = "0.4", features = ["serde"] }
once_cell = "1"
